Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23239

Compilation error in kernel/qhostinfo_p.h without bearermanagement support

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.1
    • 4.8.0
    • None
    • Debian GNU/Linux squeeze, gcc 4.6.2
    • abf19060e20b00b56812a726b1e8fa9d4c6cfd48

      After configure stage with "-no-feature-bearermanagement" option I got

      cd src/network/ && make -f Makefile
      make[1]: Entering directory `/home/sergey/code/qt-everywhere-opensource-src-4.8.0/src/network'
      compiling kernel/qhostinfo.cpp
      In file included from kernel/qhostinfo.cpp:43:0:
      kernel/qhostinfo_p.h:104:71: error: 'QNetworkSession' was not declared in this scope
      kernel/qhostinfo_p.h:104:86: error: template argument 1 is invalid
      kernel/qhostinfo.cpp:291:76: error: 'QNetworkSession' was not declared in this scope
      kernel/qhostinfo.cpp:291:91: error: template argument 1 is invalid
      make[1]: *** [.obj/debug-shared-emb-x86_64/qhostinfo.o] Error 1
      make[1]: Leaving directory `/home/sergey/code/qt-everywhere-opensource-src-4.8.0/src/network'
      make: *** [sub-network-make_default-ordered] Error 2

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            xcm Martin Petersson (Inactive)
            laborer Sergey Gusarov
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes