QNetwork: fix compilation with "-no-feature-bearermanagement"

Task-number: QTBUG-23239

Change-Id: I12f89a4e595231738985ca0cf3179fee7de9fa72
Reviewed-by: Shane Kearns <shane.kearns@accenture.com>