src/network/kernel/qhostinfo.cpp
@@ -287,11 +287,13 @@ QHostInfo QHostInfoPrivate::fromName(const QString &name, QSharedPointer<QNetwor
 #endif
 
 #ifndef Q_OS_SYMBIAN
+#ifndef QT_NO_BEARERMANAGEMENT
 // This function has a special implementation for symbian right now in qhostinfo_symbian.cpp but not on other OS.
 QHostInfo QHostInfoAgent::fromName(const QString &hostName, QSharedPointer<QNetworkSession>)
 {
     return QHostInfoAgent::fromName(hostName);
 }
+#endif
 #endif
 
 
